@@ -28,9 +28,9 @@ buildscript {
 
     dependencies {
         classpath fileTree(dir: 'libs', include: ['*.jar'])
-        classpath 'commons-io:commons-io:2.5'
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.11'
-        classpath "com.github.anuken:packr:-SNAPSHOT"
+//        classpath 'commons-io:commons-io:2.5'
+//        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.11'
+//        classpath "com.github.anuken:packr:-SNAPSHOT"
         classpath arcModule("packer")
         classpath arcModule("g3d")
         classpath "com.github.Anuken.Arc:arc-core:$mindustryVersion"
@@ -57,8 +57,7 @@ ext {
     }
 }
 dependencies {
-    compileClasspath fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'commons-io:commons-io:2.5'
+//    implementation 'commons-io:commons-io:2.5'
 //    compile project(":core")
 //    implementation project(":core")
     implementation arcModule('arc-core')
@@ -91,13 +90,14 @@ allprojects {
         jcenter()
     }
     tasks.withType(JavaCompile) {
-        targetCompatibility = 14
-        sourceCompatibility = 8
+        targetCompatibility = 8
+        sourceCompatibility = JavaVersion.VERSION_16
         options.encoding = "UTF-8"
         options.compilerArgs += ["-Xlint:deprecation"]
         options.forkOptions.jvmArgs.addAll([
-                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
+                '--illegal-access=permit',
+//                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+//                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
         ])
     }
 }
